# CudaVolumeRenderer

./: .cproject  .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  README.txt  build.sh
CudaVolumeRenderer/: CudaVolumeRenderer.sln
CudaVolumeRenderer/CudaVolumeRenderer/: CudaVolumeRenderer.vcxproj  test.hdr
CudaVolumeRenderer/CudaVolumeRenderer/src/: CudaVolPath.cu.deps  CudaVolPath_kernel.cu.deps  CurandStatesFactory.cu.deps
CudaVolumeRenderer/CudaVolumeRenderer/x64/Debug/: CudaVolPath.cu.cache  CudaVolPath_kernel.cu.cache  CurandStatesFactory.cu.cache  vc140.idb
CudaVolumeRenderer/CudaVolumeRenderer/x64/Debug/CudaVolu.5883BE73.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaVolumeRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CudaVolumeRenderer/x64/Debug/: CudaVolumeRenderer.ilk
data/: density.vol
data/cgg_logo/: heterogeneous_volume.xml  heterogeneous_volume_mitsuba_reference.exr
data/mhd/: artifix_small.raw  bonsai_small.raw
data/mitsubaxml/ad/: density.vol  volpath_bsdf.xml
data/mitsubaxml/cgg_logo/: volpath_bsdf.xml
data/mitsubaxml/smoke/: hetvol.exr
data/scenes/: example.xml
data/vdb/: bonsai_small.vdb
implementation/: CMakeLists.txt  vcpkg.json
implementation/data/mhd/: manix_small.raw
implementation/data/mitsubaxml/ad/: albedo.vol  volpath_bsdf.exr
implementation/data/mitsubaxml/cgg_logo/: albedo.vol  density.vol
implementation/data/mitsubaxml/smoke/: albedo.vol  hetvol.xml  smoke.vol
implementation/src/: AbstractRenderer.h  Bsdf.h  Buffer.h  CVRMath.h  Camera.h  Config.h  ConfigParser.cpp  ConfigParser.h  CudaMemory.h  CudaVolPath.cpp  CudaVolPath.h  Debug.h  Defines.h  GGX.h  Geometry.h  Gradient.h  HG.h  Image.cpp  Image.h  ImageBufferTransfer.cu  ImageBufferTransfer.h  InteractiveRenderer.h  Main.cpp  Math.h  Medium.h  MhaSceneBuilder.h  MortonSort.h  NaiveVolPTmk_kernel.cuh  NaiveVolPTsk_kernel.cuh  Occupancy.cuh  RawSceneBuilder.h  Ray.h  RegenerationVolPTmk_kernel.cuh  RegenerationVolPTsk_kernel.cuh  RenderKernelLauncher.cu  RenderKernelLauncher.h  RendererFactory.h  Rng.h  Scene.h  SortingVolPTsk_kernel.cuh  (+9 more)
implementation/vdb_adapter/: VDBAdapter.cpp  VDBAdapter.h
scripts/: ad-test.bat  artifix-test.bat  cgg-logo-test.bat  interactive-render-ad.bat  interactive-render-artifix.bat  interactive-render-bucky.bat  interactive-render-cgg-logo.bat  interactive-render-manix.bat  manix-test.bat
scripts/convert-mhd/: convert-all-mhd.sh  convert-mhd.sh  docker-compose.yml  mhd_to_vdb.Dockerfile  mhd_to_vdb.py
src/: Config.h  CudaVolPath.cu  CudaVolPath.cuh  CudaVolPath_kernel.cu  CurandStatesFactory.cu  CurandStatesFactory.cuh  Debug.h  Defines.h  Image.cpp  Image.h  Integrator.cpp  Integrator.h  Intersect.h  Main.cpp  RenderCamera.cpp  RenderCamera.h  Scene.h  UtilMathStructs.h  Utilities.cpp  Utilities.h
